--- a/platform-ejb/pom.xml
+++ b/platform-ejb/pom.xml
@@ -16,6 +16,12 @@
 	    <groupId>com.google.auth</groupId>
 	    <artifactId>google-auth-library-oauth2-http</artifactId>
 	    <version>0.20.0</version>
+	    <scope>provided</scope>
+	</dependency>
+	<dependency>
+	    <groupId>com.google.api-client</groupId>
+	    <artifactId>google-api-client</artifactId>
+	    <version>1.30.9</version>
 	</dependency>
 	<dependency>
 	    <groupId>javax.persistence</groupId>
