--- a/platform-web/pom.xml
+++ b/platform-web/pom.xml
@@ -8,6 +8,41 @@
   <artifactId>platform-web</artifactId>
   <packaging>war</packaging>
   
+  <properties>
+  	<platform.version>0.0.1-SNAPSHOT</platform.version>
+  </properties>
+  
+  <dependencies>
+  	<dependency>
+  		<groupId>ccf.org</groupId>
+  		<artifactId>platform-ejb</artifactId>
+  		<version>${platform.version}</version>
+  	</dependency>
+	<dependency>
+		<groupId>javax.ws.rs</groupId>
+		<artifactId>javax.ws.rs-api</artifactId>
+		<version>2.0</version>
+		<scope>provided</scope>
+	</dependency>
+	<dependency>
+        <groupId>javax.ejb</groupId>
+        <artifactId>ejb-api</artifactId>
+        <version>3.0</version>
+        <scope>provided</scope>
+    </dependency>
+    <dependency>
+        <groupId>javax.servlet</groupId>
+        <artifactId>servlet-api</artifactId>
+        <version>2.5</version>
+        <scope>provided</scope>
+    </dependency>
+    <dependency>
+        <groupId>net.sf.dozer</groupId>
+        <artifactId>dozer</artifactId>
+        <version>5.5.1</version>
+    </dependency>
+  </dependencies>
+  
   <build>
   	<finalName>exchange-platform-web</finalName>
   	<plugins>
