--- a/platform-ejb/pom.xml
+++ b/platform-ejb/pom.xml
@@ -1,60 +1,63 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <groupId>ccf.org</groupId>
-    <artifactId>exchange-platform</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
-  </parent>
-  <artifactId>platform-ejb</artifactId>
-  
-  <properties>
-  <platform.version>0.0.1-SNAPSHOT</platform.version>
-  </properties>
-  
-  <dependencies>
-  	<dependency>
-	    <groupId>com.google.auth</groupId>
-	    <artifactId>google-auth-library-oauth2-http</artifactId>
-	    <version>0.20.0</version>
-	    <scope>provided</scope>
-	</dependency>
-	<dependency>
-	    <groupId>com.google.api-client</groupId>
-	    <artifactId>google-api-client</artifactId>
-	    <version>1.30.9</version>
-	</dependency>
-	<dependency>
-	    <groupId>javax.persistence</groupId>
-	    <artifactId>javax.persistence-api</artifactId>
-	    <version>2.2</version>
-	</dependency>
-	<dependency>
-	    <groupId>javax.ejb</groupId>
-	    <artifactId>javax.ejb-api</artifactId>
-	    <version>3.2.2</version>
-	    <scope>provide</scope>
-	</dependency>
-	<dependency>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<parent>
 		<groupId>ccf.org</groupId>
-		<artifactId>platform-model</artifactId>
-		<version>${platform.version}</version>
-	</dependency>
-	<dependency>
-		<groupId>ccf.org</groupId>
-		<artifactId>platform-util</artifactId>
-		<version>${platform.version}</version>
-	</dependency>
-  </dependencies>
-  
-  <build>
-  	<plugins>
-  		<plugin>
-  			<groupId>org.apache.maven.plugins</groupId>
-  			<artifactId>maven-ejb-plugin</artifactId>
-  			<configuration>
-  				<ejbVersion>3.2</ejbVersion>
-  			</configuration>
-  		</plugin>
-  	</plugins>
-  </build>
+		<artifactId>exchange-platform</artifactId>
+		<version>0.0.1-SNAPSHOT</version>
+	</parent>
+	<artifactId>platform-ejb</artifactId>
+	<packaging>ejb</packaging>
+
+	<properties>
+		<platform.version>0.0.1-SNAPSHOT</platform.version>
+	</properties>
+
+	<dependencies>
+		<dependency>
+			<groupId>com.google.auth</groupId>
+			<artifactId>google-auth-library-oauth2-http</artifactId>
+			<version>0.20.0</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.google.api-client</groupId>
+			<artifactId>google-api-client</artifactId>
+			<version>1.30.9</version>
+		</dependency>
+		<dependency>
+			<groupId>javax.persistence</groupId>
+			<artifactId>javax.persistence-api</artifactId>
+			<version>2.2</version>
+		</dependency>
+		<dependency>
+			<groupId>javax.ejb</groupId>
+			<artifactId>javax.ejb-api</artifactId>
+			<version>3.2.2</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>ccf.org</groupId>
+			<artifactId>platform-model</artifactId>
+			<version>${platform.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>ccf.org</groupId>
+			<artifactId>platform-util</artifactId>
+			<version>${platform.version}</version>
+		</dependency>
+	</dependencies>
+
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-ejb-plugin</artifactId>
+				<configuration>
+					<ejbVersion>3.2</ejbVersion>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 </project>
